--- a/app1/templates/_navbar.html
+++ b/app1/templates/_navbar.html
@@ -1,3 +1,5 @@
 <div class="navbar">
     <a href="/">ホーム</a>
+    <a href="{% url 'app1:create' %}">新規作成</a>
+    <a href="{% url 'app2:sign_up' %}">sing up</a>
 </div>
