--- a/app1/templates/app1/nikki_detail.html
+++ b/app1/templates/app1/nikki_detail.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base.html' %}
 
 {% block contents %}
-<h1>this is Detail of {{ content }} Page</h1>
+<h1>this is Detail of {{ content.title }} Page</h1>
 {% endblock contents %}
